--- a/aula2/templates/imc_calc.html
+++ b/aula2/templates/imc_calc.html
@@ -17,6 +17,16 @@
         <input class="btn btn-primary" type="submit" value="calcular">
         <input class="btn btn-primary" type="reset" value="Limpar">
     </form>
+
+    <h1>Calcular índice de massa corporal utilizando o método POST</h1>
+    <form class="form-control" action="calcular_imc_get" method="get">
+        <label class="form-label">Sua Altura</label>
+        <input class="form-control" type="text" name="txt_altura"><br>
+        <label class="form-label">Seu peso</label>
+        <input class="form-control" type="text" class="form-control-plaintext" name="txt_peso"><br>
+        <input class="btn btn-primary" type="submit" value="calcular">
+        <input class="btn btn-primary" type="reset" value="Limpar">
+    </form>
     <h1>{{ res_imc }}</h1>
 </body>
 </html>
