--- a/aula2/templates/imc_calc.html
+++ b/aula2/templates/imc_calc.html
@@ -27,6 +27,15 @@
         <input class="btn btn-primary" type="submit" value="calcular">
         <input class="btn btn-primary" type="reset" value="Limpar">
     </form>
-    <h1>{{ res_imc }}</h1>
+    {{IMC}{classificado}}
+    {% if classificado == "MAGREZA" %}
+        <br>
+        <img src="" alt="">
+    {% else %}
+        {% if classificado == "SOBREPESO" %}
+            <br>
+            <img src="" alt="">
+        {% endif %}
+    {% endif %}
 </body>
 </html>
